--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,8 @@ button:hover {
 /* Media query for mobile devices */
 @media screen and (max-width: 768px) {
   .container {
-    max-width: 90vw; /* Reduce container width for smaller screens */
+    max-width: 90vw;
+    grid-template-columns: repeat(3,65px); /* Reduce container width for smaller screens */
   }
 
   .card {
